Springify hubway querying

--- a/src/main/resources/properties/galaway.properties
+++ b/src/main/resources/properties/galaway.properties
@@ -4,3 +4,6 @@ mongo.username=galaway
 mongo.db=galaway
 mongo.password=galaway1
 mongo.collections.stations=Stations
+
+hubway.url = http://hubwaydatachallenge.org/api/v1/
+hubway.credentials = /?format=json&username=cbaltera&api_key=25f3498d4e7f722a0ed6f3757542669b443e21a6
