--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<version>20140107</version>
 		</dependency>
 
+		<!-- Free Lat and Longitude -->
+		<dependency>
+			<groupId>com.javadocmd</groupId>
+			<artifactId>simplelatlng</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
@@ -96,4 +102,6 @@
 			<layout>default</layout>
 		</repository>
 	</repositories>
+
+
 </project>
