--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,11 @@
 			<artifactId>spring-context</artifactId>
 			<version>4.0.5.RELEASE</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.18.0-rc</version>
+		</dependency>
 		<!-- mongodb java driver -->
 		<dependency>
 			<groupId>org.mongodb</groupId>
@@ -81,6 +85,11 @@
 			<artifactId>simplelatlng</artifactId>
 			<version>1.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
@@ -100,6 +109,14 @@
 			<name>mjorm maven repository</name>
 			<url>http://mongo-java-orm.googlecode.com/svn/maven/repo/</url>
 			<layout>default</layout>
+		</repository>
+		<repository>
+			<id>google-api-services</id>
+			<url>https://oss.sonatype.org/content/repositories/releases/</url>
+		</repository>
+		<repository>
+			<id>google-api-services-beta</id>
+			<url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
 		</repository>
 	</repositories>
 
